--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,19 +11,15 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: assets/trophies.svg
-
-      - name: Detailed Stats and Achievements
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ github.token }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           user: Sahitya0805
-          filename: assets/detailed_stats.svg
+          template: classic
           base: activity, community
           base_indepth: yes
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_only: pull-shark
+          plugin_achievements_threshold: C
           plugin_followup: yes
           plugin_followup_sections: user
           config_timezone: Asia/Kolkata
+          filename: assets/detailed_stats.svg
