--- a/.github/workflows/fetch-external-assets.yml
+++ b/.github/workflows/fetch-external-assets.yml
@@ -63,6 +63,18 @@ jobs:
         run: |
           curl -L "https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif" -o assets/neon_separator.gif
 
+      - name: Fetch Stats Box 1 (Activity)
+        run: |
+          curl -L "https://github-readme-stats.vercel.app/api?username=Sahitya0805&show_icons=true&theme=tokyonight&hide=prs,issues" -o assets/github_stats_specs.svg
+
+      - name: Fetch Stats Box 2 (Languages)
+        run: |
+          curl -L "https://github-readme-stats.vercel.app/api/top-langs/?username=Sahitya0805&layout=compact&theme=tokyonight" -o assets/top_langs_specs.svg
+
+      - name: Fetch Trophies (Direct Reliable Fallback)
+        run: |
+          curl -L "https://github-profile-trophy.vercel.app/?username=Sahitya0805&theme=tokyonight&no-frame=true" -o assets/trophies.svg
+
       - name: Commit and Push
         run: |
           git config user.name "github-actions[bot]"
