--- a/.github/workflows/fetch-external-assets.yml
+++ b/.github/workflows/fetch-external-assets.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Create assets directory
         run: mkdir -p assets
 
-      - name: Fetch Headers (DOUBLE SIZE Welcome)
+      - name: Fetch Headers (DOUBLE SIZE for Both)
         run: |
           curl -L "https://readme-typing-svg.demolab.com?font=Digital-7+Mono&color=1E90FF&size=110&center=true&vCenter=true&width=3000&height=200&lines=%F0%9F%8C%8E+WELCOME+TO+MY+DIGITAL+WORLD+%F0%9F%8C%8E" -o assets/typing_header_world.svg
-          curl -L "https://readme-typing-svg.demolab.com?font=Digital-7+Mono&color=1E90FF&size=50&center=true&vCenter=true&width=2400&height=140&lines=%F0%9F%91%8B+Hi,+I%27m+Sahitya+Singh!" -o assets/typing_header_hi.svg
+          curl -L "https://readme-typing-svg.demolab.com?font=Digital-7+Mono&color=1E90FF&size=100&center=true&vCenter=true&width=3000&height=200&lines=%F0%9F%91%8B+Hi,+I%27m+Sahitya+Singh!" -o assets/typing_header_hi.svg
 
       - name: Fetch Typing Thunder Separator
         run: |
